# jucecmake

./: CMakeLists.txt  README.md
src/cpp/: CMakeLists.txt  CircularBuffer.h  LuaEnv.cpp  LuaEnv.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/js/: package-lock.json  package.json
src/js/src/: App.tsx  main.tsx  vite-env.d.ts
src/js/src/components/knobs/: KnobBase.tsx  KnobBaseThumb.tsx  KnobPercentage.tsx  LICENSE-MIT
src/js/src/components/monitor/: Monitor.tsx
tests/: CMakeLists.txt  LuaEnv_test.cpp
